ProjetCompil/Verif/Test/fail/prof1.cas
program
begin
	write(i);
end.